--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "django-piston"]
 	path = django-piston
-	url = git@github.com:authmillenon/django-piston-Fork.git
+	url = git://github.com/authmillenon/django-piston-Fork.git
