--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "django-piston"]
-	path = django-piston
+[submodule "djangopiston"]
+	path = djangopiston
 	url = git://github.com/authmillenon/django-piston-Fork.git
